# uni-pcs-4_pr

./: CMakeLists.txt  README.md  отчет.md
include/: CodeParser.h  DocFactory.h  DocumentModel.h  DocumentationGenerator.h  FileScanner.h  HtmlGenerationStrategy.h  HtmlGenerator.h
src/: CodeParser.cpp  DocFactory.cpp  DocumentModel.cpp  DocumentationGenerator.cpp  FileScanner.cpp  HtmlGenerationStrategy.cpp  HtmlGenerator.cpp  main.cpp
